--- a/packages/configs/mkosi/kernel/6.17.y.config
+++ b/packages/configs/mkosi/kernel/6.17.y.config
@@ -86,6 +86,7 @@ CONFIG_IA32_EMULATION=y
 CONFIG_KVM=m
 CONFIG_KVM_INTEL=m
 CONFIG_KVM_AMD=m
+# CONFIG_KVM_HYPERV is not set
 CONFIG_KPROBES=y
 CONFIG_JUMP_LABEL=y
 CONFIG_MODULES=y
@@ -694,15 +695,12 @@ CONFIG_VIRT_DRIVERS=y
 CONFIG_VIRTIO_PCI=y
 CONFIG_VIRTIO_BALLOON=y
 CONFIG_VIRTIO_INPUT=y
-CONFIG_VDPA=y
-CONFIG_VDPA_SIM=y
-CONFIG_VDPA_SIM_NET=y
-CONFIG_VDPA_SIM_BLOCK=y
-CONFIG_VP_VDPA=y
+CONFIG_VDPA=m
+CONFIG_VP_VDPA=m
 CONFIG_VHOST_NET=m
 CONFIG_VHOST_SCSI=m
 CONFIG_VHOST_VSOCK=m
-CONFIG_VHOST_VDPA=y
+CONFIG_VHOST_VDPA=m
 CONFIG_VHOST_CROSS_ENDIAN_LEGACY=y
 # CONFIG_SURFACE_PLATFORMS is not set
 # CONFIG_X86_PLATFORM_DEVICES is not set
@@ -720,7 +718,6 @@ CONFIG_EXT4_FS_SECURITY=y
 CONFIG_XFS_FS=m
 CONFIG_XFS_QUOTA=y
 CONFIG_XFS_POSIX_ACL=y
-CONFIG_XFS_RT=y
 CONFIG_BTRFS_FS=m
 CONFIG_BTRFS_FS_POSIX_ACL=y
 CONFIG_EXPORTFS_BLOCK_OPS=y
